kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cannabis-deployment
  labels:
    app: cannabis-prod
spec:
  selector:
    matchLabels:
      app: cannabis-prod
  template:
    metadata:
      labels:
        app: cannabis-prod
    spec:
      containers:
        - name: cannabis-backend
          startupProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis.dbca.wa.gov.au
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis.dbca.wa.gov.au
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: cannabis.dbca.wa.gov.au
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: prince2-license-prod
              mountPath: /usr/lib/prince/license
              readOnly: true
        - name: cannabis-frontend
          imagePullPolicy: IfNotPresent
      volumes:
        - name: prince2-license-prod
          configMap:
            defaultMode: 420
            name: prince2-license-prod
