kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: cannabis-clusterip
spec:
  type: ClusterIP
  selector:
    app: cannabis-prod
    variant: prod
