kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cannabis-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cannabis.dbca.wa.gov.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cannabis-clusterip-prod
                port:
                  number: 3000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: cannabis-clusterip-prod
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cannabis-clusterip-prod
                port:
                  number: 8000
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: cannabis-clusterip-prod
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: cannabis-clusterip-prod
                port:
                  number: 8000
